Update 'uyfcrzmws-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:233935d29a4270db4f67c8f149593d8524c6f8bb@sha256:b077b7eddbe3856f9ccd357c4b5dde4a19f705fde412e3c1afaaf7e6cb3831d3

--- a/components/uyfcrzmws-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/uyfcrzmws-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: uyfcrzmws-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:233935d29a4270db4f67c8f149593d8524c6f8bb@sha256:b077b7eddbe3856f9ccd357c4b5dde4a19f705fde412e3c1afaaf7e6cb3831d3
+          name: container-image
